tests/compile_errors/interpolation-block-expression.buzz
// Block expressions are not allowed inside string interpolation
test "block expressions are forbidden inside string interpolation" {
    _ = "{from { out "x"; }}";
}
